--- a/execution_app/templates/enter_nickname.html
+++ b/execution_app/templates/enter_nickname.html
@@ -16,17 +16,10 @@
             </div>
         </header>
         <div id="student-result"></div>
-        <div id="join-form" method="post" class = 'form_enter'>
-            <p>GPTQuiz</p>
-            <div class = 'input_code'>
-                <input type="text" id="username" value="{{ username }}" name="input-nickname" placeholder="Введіть нікнейм">
-                <button class="button_code" type="button"><span class = 'button_span'>ДАЛІ</span>→</button>
-            </div> 
-        </div>
         <div class="waiting-divdiv">
 
         </div>
-        <div id="lobby" style="display:none;">
+        <div id="lobby">
             <h1 id="quiz-title">{{ quiz.name }}</h1>
             <h2>Ім'я вчителя: {{ teacher.name }} {{ teacher.surname }}</h2>
             <h2>Кількість запитань: {{ quiz.questions|length }}</h2>
@@ -49,50 +42,49 @@
                 const code = urlParams.get("code");
                 const div = document.getElementById('lobby');
                 let answered = false;
-                let username, answer1, answerDiv;
+                let username = "{{ username }}"
+                let student_id= "{{ student.id }}"
+                let answer1, answerDiv, my_hash;
                 
                 
                 const quizId = '{{ quiz.id }}'
 
-                const reconnectHash = localStorage.getItem(`reconnect_${code}`);
-                console.log("Reconnect Hash:", reconnectHash);
-                if (reconnectHash) {
-                    socket.emit("auto_join_room", { code, quizId, reconnectHash });
-                } else {
-                    document.getElementById("join-form").style.display = "flex";
-                }
+                console.log("Reconnect Hash:", student_id);
+                socket.emit("join_room", { code, quizId, student_id });
                 
                 socket.on("auto_join_error", data => {
-                    document.getElementById("join-form").style.display = "flex";
+                    console.log("ERORORO:", data.message)
                 });
 
                 socket.on("join_error", data => {
                     alert(data.message);
-                    document.getElementById("join-form").style.display = "flex";
                 });
-
-                document.querySelector(".button_code").addEventListener("click", () => {
-                    username = document.getElementById("username").value;
-                    if (!username) return alert("Введіть нікнейм!");
-                    if (!code) return alert("Код кімнати не знайдено!");
-    
-                    socket.emit("join_room", { username, code, quizId });
-                })
                 
                 socket.on("joined_success", data => {
-                    if (data.reconnect_hash) {
-                        localStorage.setItem(`reconnect_${code}`, data.reconnect_hash);
-                    }
-                    document.getElementById("join-form").style.display = "none";
                     document.getElementById("lobby").style.display = "flex";
                     document.getElementById("header").style.display = "grid";
                     document.getElementById("currentQ").textContent = "0"
                     document.getElementById("quiz-title").textContent = data.quiz_name;
+                    my_hash = data.hash
+                });
+                
+                socket.on("join_error", data => {
+                    alert(data.message);
+                });
+    
+                socket.on("user_list_update", data => {
+                    const userList = document.getElementById("users");
+                    userList.innerHTML = ""; 
+                    console.log(data);
+                    data.students.forEach(student => {
+                        const li = document.createElement("li");
+                        li.textContent = student[0];
+                        userList.appendChild(li);
+                    });
                 });
 
                 socket.on("remove_student_client", data => {
-                    if (data.username !== username) return;
-                    localStorage.removeItem(`reconnect_${code}`);
+                    if (data.hash !== my_hash) return;
                     alert("Вас видалено з кімнати.");
                     window.location.href = "/";
                 });
@@ -295,21 +287,6 @@
                     }
                     document.getElementById("currentQ").textContent = data.current_question
                     document.getElementById('notifyDiv').remove();
-                });
-                
-                socket.on("join_error", data => {
-                    alert(data.message);
-                });
-    
-                socket.on("user_list_update", data => {
-                    const userList = document.getElementById("users");
-                    userList.innerHTML = ""; 
-                    console.log(data.students);
-                    data.students.forEach(student => {
-                        const li = document.createElement("li");
-                        li.textContent = student;
-                        userList.appendChild(li);
-                    });
                 });
             
                 socket.on("current_question_info", data => {
