--- a/project/templates/base_student.html
+++ b/project/templates/base_student.html
@@ -10,5 +10,6 @@
         {% block content %}
             
         {% endblock %}
+        <script src="{{ url_for('static', filename= 'js/ApexCharts.js') }}"></script>
     </body>
 </html>
