--- a/execution_app/static/css/summary.css
+++ b/execution_app/static/css/summary.css
@@ -117,7 +117,6 @@ header img {
     display: flex;
     flex-direction: column;
     width: 860px;
-    height: 423px;
     padding: 15px;
     gap: 10px;
     background-color: #353535;
@@ -218,28 +217,35 @@ header img {
 .wronga {
     background-color: #F03C39;
 }
+.skippeda {
+    background-color: #626875;
+}
 .answersCorrWron{
     display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 43px;
     gap: 10px;
 }
-.answersCorrWron div {
+.section1 {
+    display: flex;
+    gap: 10px;
+}
+.section1 div {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 20px;
+    padding: 8px;
     background-color: #2B2B2B;
     border-radius: 5px;
     gap: 5px;
 }
-.answersCorrWron div p {
+.section1 div p {
     text-align: center;
     font-size: 18px;
     font-weight: 400;
 }
-.answersCorrWron div span {
+.section1 div span {
     color: #B26FFF;
     font-weight: 500;
 }
@@ -308,7 +314,7 @@ header img {
         height: auto;
     }
     header {
-        height: 55px;
+        height: 70px;
         padding-left: 15px !important;
         padding-right: 15px !important;
         justify-content: space-between;
@@ -317,28 +323,27 @@ header img {
     }
 
     .logo-title img {
-        width: 34px;
-        height: 34px;
+        width: 50px;
+        height: 50px;
     }
 
     .logo-title h1 {
-        font-size: 18px;
+        font-size: 22px;
     }
 
     .links {
-        gap: 8px;
+        gap: 10px;
     }
 
     .links a {
-        font-size: 13px;
+        font-size: 18px;
     }
 
     .enter-code,
-    .login,
-    .signin {
-        height: 32px;
-        padding: 5px 10px;
-        font-size: 13px;
+    .login{
+        height: auto;
+        padding: 7px 15px;
+        font-size: 16px;
         border-radius: 6px;
     }
     .enter-code {
