--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -14,6 +14,7 @@
                     <img src="{{ url_for('static', filename= 'images/atom.svg') }}">
                     <h1>GPTQuiz</h1>
                 </a>
+                <p>{{ ignore_links }}</p>
                 {% if not ignore_links %}
                     <div class="links">
                         <a href="/execution/" class="enter-code">Введіть код</a>
