--- a/student_app/templates/student_home.html
+++ b/student_app/templates/student_home.html
@@ -13,19 +13,45 @@
         <h1>Привіт, {{ current_user.surname }} {{ current_user.name }}!</h1>
         <hr>
         <div>
-            <h2>Твої попередні результати тестів:</h2>
             {% if not results %}
                 <p>Тут поки що нічого немає...</p>
             {% else %}
-                {% for report in results %}
-                    <hr>
-                    <a href="/student/report/{{ report.hash_code }}">
-                        <p>Id: {{ report.id }}</p>
-                        <p>Grade: {{ report.grade }}</p>
-                        <p>DateTime: {{ report.created_at }}</p>
-                    </a>
-                {% endfor %}
+                <div class="stats">
+                    <h1>Твої загальні результати:</h1>
+
+                    <div class="charts-grid">
+                        <div class="chart-card">
+                            <h3>Твій прогресс</h3>
+                            <div id="lineChart"></div>
+                        </div>
+                        <div class="chart-card">
+                            <h3>Статистика оцінок</h3>
+                            <div id="pieChart"></div>
+                        </div>
+                    </div>
+
+                    <div class="controls-container">
+                        <input type="date" id="start_date" class="date-input">
+                        <input type="date" id="end_date" class="date-input">
+                        <button onclick="updateCharts()" class="update-btn">Оновити дані</button>
+                    </div>
+
+                    <input type="hidden" id="student_id" value="{{ current_user.id }}">
+                </div>
+                <hr>    
+                <div class="history">
+                    <h2>Твої попередні результати тестів:</h2>
+                    {% for report in results %}
+                        <hr>
+                        <a href="/student/report/{{ report.hash_code }}">
+                            <span class="date-part">Дата: {{ report.created_at.strftime('%d.%m') }}</span>
+                            <span class="time-part">Час проходження: {{ report.created_at.strftime('%H:%M') }}</span>
+                            <span class="score-part">Оцінка: <b>{{ report.grade }}</b></span>
+                        </a>
+                    {% endfor %}
+                </div>
             {% endif %}
         </div>
     </main>
+    <script src="{{ url_for('student_app.static', filename='js/main_charts.js')}}"></script>
 {% endblock %}
