--- a/student_app/templates/student_home.html
+++ b/student_app/templates/student_home.html
@@ -21,7 +21,7 @@
 
                     <div class="charts-grid">
                         <div class="chart-card">
-                            <h3>Твій прогресс</h3>
+                            <h3>Твій прогрес</h3>
                             <div id="lineChart"></div>
                         </div>
                         <div class="chart-card">
@@ -32,6 +32,7 @@
 
                     <div class="controls-container">
                         <input type="date" id="start_date" class="date-input">
+                        <p>—</p>
                         <input type="date" id="end_date" class="date-input">
                         <button onclick="updateCharts()" class="update-btn">Оновити дані</button>
                     </div>
