--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -25,7 +25,7 @@
     padding: 40px;
     gap: 10px;
     left: 220px;
-    top: 45px;
+    top: 40px;
     width: calc(100% - 220px);
 
 }
@@ -37,7 +37,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 97%;
+    width: 95%;
     align-items: center; 
 
     padding: 10px 20px 30px;
@@ -111,6 +111,9 @@
     flex-direction: column;
     border-radius: 20px;
     border: 2px solid #2b2b2b;
+}
+.judah.hide {
+    display: none;
 }
 .colors-of-correctness {
     width: 100%;
@@ -378,4 +381,27 @@
 #confirm {
     background: none;
     border: 2px solid white;
+}
+/*  */
+.chart-container {
+    width: 98%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.chart-container.hide {
+    display: none;
+}
+.chart-card {
+    background: #272727;
+    border: 1px solid #2b2b2b;
+    border-radius: 12px;
+    padding: 25px;
+    width: 100%;
+}
+
+.chart-card h3 {
+    text-align: center;
+    color: #fff;
+    font-weight: 500;
 }
