--- a/classroom_app/static/css/class.css
+++ b/classroom_app/static/css/class.css
@@ -21,7 +21,7 @@ main p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
+    width: 350px;
     background-color: #2b2b2b;
     border-radius: 15px;
     padding: 25px;
@@ -31,7 +31,16 @@ main p {
     transition: all 0.3s ease;
     z-index: 7;
 }
-.create-form * {
+.info-in-modal {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+.modalinfo h4 {
+    font-size: 20px;
+}
+.create-form, .modalinfo * {
     color: white;
 }
 .create-form p {
@@ -62,8 +71,9 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }   
-.create-form button {
+.create-form button, .modalinfo button {
     cursor: pointer;
+    font-weight: 500;
 }
 .submit {
     display: flex;
